implementations/rust/c/bindings/src/bindings.rs

extern "C" {
    #[doc = " @brief   Export data from an ockam vault secret into the supplied output buffer."]
    #[doc = " @param   vault[in]                 Vault object to use for exporting secret data."]
    #[doc = " @param   secret[in]                Ockam vault secret to export data from."]
    #[doc = " @param   output_buffer[out]        Buffer to place the exported secret data in."]
    #[doc = " @param   output_buffer_size[in]    Size of the output buffer."]
    #[doc = " @param   output_buffer_length[out] Amount of data placed in the output buffer."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_secret_export(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
        output_buffer: *mut u8,
        output_buffer_size: usize,
        output_buffer_length: *mut usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Retrieve the public key from an ockam vault secret."]
    #[doc = " @param   vault[in]                 Vault object to use for exporting the public key"]
    #[doc = " @param   secret[in]                Ockam vault secret to export the public key for."]
    #[doc = " @param   output_buffer[out]        Buffer to place the public key in."]
    #[doc = " @param   output_buffer_size[in]    Size of the output buffer."]
    #[doc = " @param   output_buffer_length[out] Amount of data placed in the output buffer."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_secret_publickey_get(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
        output_buffer: *mut u8,
        output_buffer_size: usize,
        output_buffer_length: *mut usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Retrive the attributes for a specified secret"]
    #[doc = " @param   vault[in]               Vault object to use for retrieving ockam vault secret attributes."]
    #[doc = " @param   secret[in]              Ockam vault secret to get attributes for."]
    #[doc = " @param   secret_attributes[out]  Pointer to the attributes for the specified secret."]
    pub fn ockam_vault_secret_attributes_get(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
        attributes: *mut ockam_vault_secret_attributes_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Set or change the type of secret. Note: EC secrets can not be changed."]
    #[doc = " @param   vault[in]   Vault object to use for setting secret type."]
    #[doc = " @param   secret[in]  Secret to change the type."]
    #[doc = " @param   type[in]    Type of secret to change to."]
    pub fn ockam_vault_secret_type_set(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
        type_: ockam_vault_secret_type_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Delete an ockam vault secret."]
    #[doc = " @param   vault[in]   Vault object to use for deleting the ockam vault secret."]
    #[doc = " @param   secret[in]  Ockam vault secret to delete."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_secret_destroy(
        vault: *mut ockam_vault_t,
        secret: *mut ockam_vault_secret_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Perform an ECDH operation on the supplied ockam vault secret and peer_publickey. The result is another"]
    #[doc = "          ockam vault secret of type unknown."]
    #[doc = " @param   vault[in]                 Vault object to use for encryption."]
    #[doc = " @param   privatekey[in]            The ockam vault secret to use for the private key of ECDH."]
    #[doc = " @param   peer_publickey[in]        Public key data to use for ECDH."]
    #[doc = " @param   peer_publickey_length[in] Length of the public key."]
    #[doc = " @param   shared_secret[out]        Resulting shared secret from a sucessful ECDH operation. Invalid if ECDH failed."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_ecdh(
        vault: *mut ockam_vault_t,
        privatekey: *mut ockam_vault_secret_t,
        peer_publickey: *const u8,
        peer_publickey_length: usize,
        shared_secret: *mut ockam_vault_secret_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Perform an HMAC-SHA256 based key derivation function on the supplied salt and input key material."]
    #[doc = " @param   vault[in]                 Vault object to use for encryption."]
    #[doc = " @param   salt[in]                  Ockam vault secret containing the salt for HKDF."]
    #[doc = " @param   input_key_material[in]    Ockam vault secret containing input key material to use for HKDF."]
    #[doc = " @param   derived_outputs_count[in] Total number of keys to generate."]
    #[doc = " @param   derived_outputs[out]      Array of ockam vault secrets resulting from HKDF."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_hkdf_sha256(
        vault: *mut ockam_vault_t,
        salt: *mut ockam_vault_secret_t,
        input_key_material: *mut ockam_vault_secret_t,
        derived_outputs_count: u8,
        derived_outputs: *mut ockam_vault_secret_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Encrypt a payload using AES-GCM."]
    #[doc = " @param   vault[in]                       Vault object to use for encryption."]
    #[doc = " @param   key[in]                         Ockam secret key to use for encryption."]
    #[doc = " @param   nonce[in]                       Nonce value to use for encryption."]
    #[doc = " @param   additional_data[in]             Additional data to use for encryption."]
    #[doc = " @param   additional_data_length[in]      Length of the additional data."]
    #[doc = " @param   plaintext[in]                   Buffer containing plaintext data to encrypt."]
    #[doc = " @param   plaintext_length[in]            Length of plaintext data to encrypt."]
    #[doc = " @param   ciphertext_and_tag[in]          Buffer containing the generated ciphertext and tag data."]
    #[doc = " @param   ciphertext_and_tag_size[in]     Size of the ciphertext + tag buffer. Must be plaintext_size + 16."]
    #[doc = " @param   ciphertext_and_tag_length[out]  Amount of data placed in the ciphertext + tag buffer."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_aead_aes_gcm_encrypt(
        vault: *mut ockam_vault_t,
        key: *mut ockam_vault_secret_t,
        nonce: u16,
        additional_data: *const u8,
        additional_data_length: usize,
        plaintext: *const u8,
        plaintext_length: usize,
        ciphertext_and_tag: *mut u8,
        ciphertext_and_tag_size: usize,
        ciphertext_and_tag_length: *mut usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Decrypt a payload using AES-GCM."]
    #[doc = " @param   vault[in]                     Vault object to use for decryption."]
    #[doc = " @param   key[in]                       Ockam secret key to use for decryption."]
    #[doc = " @param   nonce[in]                     Nonce value to use for decryption."]
    #[doc = " @param   additional_data[in]           Additional data to use for decryption."]
    #[doc = " @param   additional_data_length[in]    Length of the additional data."]
    #[doc = " @param   ciphertext_and_tag[in]        The ciphertext + tag data to decrypt."]
    #[doc = " @param   ciphertext_and_tag_length[in] Length of the ciphertext + tag data to decrypt."]
    #[doc = " @param   plaintext[out]                Buffer to place the decrypted data in."]
    #[doc = " @param   plaintext_size[in]            Size of the plaintext buffer. Must be ciphertext_tag_size - 16."]
    #[doc = " @param   plaintext_length[out]         Amount of data placed in the plaintext buffer."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_vault_aead_aes_gcm_decrypt(
        vault: *mut ockam_vault_t,
        key: *mut ockam_vault_secret_t,
        nonce: u16,
        additional_data: *const u8,
        additional_data_length: usize,
        ciphertext_and_tag: *const u8,
        ciphertext_and_tag_length: usize,
        plaintext: *mut u8,
        plaintext_size: usize,
        plaintext_length: *mut usize,
    ) -> ockam_error_t;
}
extern "C" {
    pub static OCKAM_MUTEX_INTERFACE_ERROR_DOMAIN: *const ::std::os::raw::c_char;
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_error_code_mutex_interface_t {
    OCKAM_MUTEX_INTERFACE_ERROR_INVALID_PARAM = 1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ockam_mutex_t {
    _unused: [u8; 0],
}
pub type ockam_mutex_lock_t = *mut ::core::ffi::c_void;
extern "C" {
    #[doc = " @brief   Deinitialize the specified ockam mutex object."]
    #[doc = " @param   mutex[in]  The ockam mutex object to deinitialize."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_mutex_deinit(mutex: *mut ockam_mutex_t) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Allocate mutex from the specified mutex module"]
    #[doc = " @param   mutex[in]"]
    #[doc = " @param   lock[in]"]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_mutex_create(
        mutex: *mut ockam_mutex_t,
        lock: *mut ockam_mutex_lock_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Destroy the specified mutex lock object."]
    #[doc = " @param   mutex[in]"]
    #[doc = " @param   lock[in]"]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_mutex_destroy(
        mutex: *mut ockam_mutex_t,
        lock: ockam_mutex_lock_t,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Lock the specified lock object."]
    #[doc = " @param   mutex[in]"]
    #[doc = " @param   lock[in]"]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_mutex_lock(mutex: *mut ockam_mutex_t, lock: ockam_mutex_lock_t) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Unlock the specified lock object."]
    #[doc = " @param   mutex[in]"]
    #[doc = " @param   lock[in]"]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    pub fn ockam_mutex_unlock(mutex: *mut ockam_mutex_t, lock: ockam_mutex_lock_t)
        -> ockam_error_t;
}
